Use gtk3.0 instead of SimpleGUI

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
+wheel==0.38.4
 argostranslate==1.8.0
 Pillow==9.4.0
 pyocr==0.8.3
 pyscreenshot==3.0
-PySimpleGUI==4.60.4
+vext==0.7.6
+vext.gi==0.7.4
+PyGObject==3.42.2
+gobject==0.1.0
